# CatSprayer

./: .gitignore  README.md  gui.spec  pyproject.toml
config/: config.json
src/catsprayer/: __init__.py  camera.py  config.py  detector.py  event_recorder.py  gpio_control.py  gui.py  imx500.py  logger.py  main.py  models.py  paths.py  sprayer.py  video_recorder.py
src/catsprayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cat_detection_live.py  test_cat_detector.py  test_detector.py  test_gpio.py  test_imx500_camera.py  test_imx500_outputs.py  test_sprayer.py  test_video_recording.py
