#tells Python how to build and install your project.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

#contains your project's metadata and runtime dependencies.
[project]
name = "catsprayer"
version = "0.1.0"
description = "AI-powered cat deterrent using a Raspberry Pi AI Camera"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sean Haney" }
]
keywords = [
    "raspberry-pi",
    "computer-vision",
    "imx500",
    "ai-camera",
    "gpio",
    "cat",
    "opencv"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Home Automation"
]

dependencies = [
    "gpiozero",
    "numpy"
]

#defines tools used during development (formatting, linting, testing).
[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]

#creates a catsprayer command that will run main() once the project is installed.
[project.scripts]
catsprayer = "catsprayer.main:main"

#tells setuptools to use the src/ layout.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

#[tool.black] and [tool.ruff] configure code formatting and linting so the whole project stays consistent.
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
