[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "catsprayer"
version = "0.1.0"
description = "AI powered cat detection and automated sprayer system"
requires-python = ">=3.11"

dependencies = [
    "picamera2",
    "numpy",
    "lgpio"
]


[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]


#creates a catsprayer command that will run main() once the project is installed.
[project.scripts]
catsprayer = "catsprayer.main:main"


#tells setuptools to use the src/ layout.
[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


#[tool.black] and [tool.ruff] configure code formatting and linting so the whole project stays consistent.
[tool.black]
line-length = 88
target-version = ["py311"]


[tool.ruff]
line-length = 88
target-version = "py311"


[tool.pytest.ini_options]
testpaths = ["tests"]



#CatSprayer hardware configuration
[tool.catsprayer]

#Raspberry Pi GPIO pin connected to the sprayer driver circuit
sprayer_pin = 17

#true = software simulation mode
#false = use Raspberry Pi GPIO output
simulation = false

#Amount of time the sprayer remains active (seconds)
spray_duration = 1.0



#AI detection configuration
[tool.catsprayer.detector]

#Minimum confidence value required from the AI model
confidence_threshold = 0.65

#Number of consecutive detections required before triggering
required_detections = 5

#Amount of time a cat must remain detected before activation
trigger_delay = 1.0

#Minimum time between spray activations
cooldown_time = 10.0



#Camera configuration
[tool.catsprayer.camera]

#Main camera display resolution
width = 1920
height = 1080

#IMX500 neural network input resolution
ai_width = 320
ai_height = 320



#Application logging configuration
[tool.catsprayer.logging]

#Logging level options:
#DEBUG, INFO, WARNING, ERROR
level = "INFO"

#Enable saving detection events
enable_events = true

#Video recording configuration
[tool.catsprayer.video]

#Enable video recording
enabled = true

#Folder where recordings are saved
output_directory = "recordings"

#Video format
format = "mp4"

#Recording resolution
width = 1920
height = 1080

#Frames per second
fps = 30

#Maximum recording length (seconds)
max_duration = 60
